# MineHost-Companion

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/minecraft_server/: eula.txt  server.properties  spigot.yml
backend/minecraft_server/plugins/bStats/: config.yml
backend/minecraft_server/world/: level.dat_old
backend/minecraft_server/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world/poi/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world_nether/DIM-1/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world_nether/DIM-1/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world_the_end/DIM1/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/minecraft_server/world_the_end/DIM1/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
backend/src/: downloader.rs  main.rs
frontend/: pubspec.yaml
frontend/lib/: main.dart
