[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
